--- a/style.css
+++ b/style.css
@@ -114,14 +114,14 @@ body{
 }
 .menu-trigger {
   position: relative;
-  width: 5vw;
-  height: 5vw;
+  width: 45px;
+  height: 45px;
 }
 .menu-trigger span {
   position: absolute;
   left: 0;
   width: 100%;
-  height: 1vw;
+  height: 9px;
   background-color: rgb(0,52,165);
   border-radius: 35%;
 }
@@ -129,46 +129,24 @@ body{
   top: 0;
 }
 .menu-trigger span:nth-of-type(2) {
-  top: 2vw;
+  top: 18px;
 }
 .menu-trigger span:nth-of-type(3) {
   bottom: 0;
-}
-@media (min-width:1500px) {
-  .menu-trigger{
-    width: 5vh;
-    height: 5vh;
-  }
-  .menu-trigger span{
-    height: 1vh;
-  }
-  .menu-trigger span:nth-of-type(2) {
-    top: 2vh;
-  }
 }
 /* ハンバーガーメニュー基礎ここまで */
 
 /* ハンバーガーメニュー動作 */
 .menu-trigger.active span:nth-of-type(1) {
-  -webkit-transform: translateY(2vw) rotate(-45deg);
-  transform: translateY(2vw) rotate(-45deg);
+  -webkit-transform: translateY(18px) rotate(-45deg);
+  transform: translateY(18px) rotate(-45deg);
 }
 .menu-trigger.active span:nth-of-type(2) {
   opacity: 0;
 }
 .menu-trigger.active span:nth-of-type(3) {
-  -webkit-transform: translateY(-2vw) rotate(45deg);
-  transform: translateY(-2vw) rotate(45deg);
-}
-@media (min-width:1500px){
-  .menu-trigger.active span:nth-of-type(1) {
-    -webkit-transform: translateY(2vh) rotate(-45deg);
-    transform: translateY(2vh) rotate(-45deg);
-  }
-  .menu-trigger.active span:nth-of-type(3) {
-    -webkit-transform: translateY(-2vh) rotate(45deg);
-    transform: translateY(-2vh) rotate(45deg);
-  }
+  -webkit-transform: translateY(-18px) rotate(45deg);
+  transform: translateY(-18px) rotate(45deg);
 }
 /* ハンバーガーメニュー動作ここまで */
 /* ヘッダーここまで */
