--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ body{
 #nav li{
   padding: 15px;
   border-bottom: 1px solid #fff;
-  font-size: 10vw;
+  font-size: 15px;
 }
 @media (min-width:1000px) {
   #nav{
