--- a/style.css
+++ b/style.css
@@ -238,7 +238,12 @@ footer .copy{
   background-color: rgba(0,0,0,0.2);
 }
 @media screen and (max-width:1499px) {
+  .slider h1{
+    font-size:30px;
+  }
   .slider img{
+    text-align: center;
+    margin: 0 auto;
     width: 80vw;
   }
   .slider p{
