--- a/style.css
+++ b/style.css
@@ -135,6 +135,21 @@ body{
 .menu-trigger span:nth-of-type(3) {
   bottom: 0;
 }
+@media screen and (max-width:999px){
+  #btn{
+  padding: 10px;
+  }
+.menu-trigger {
+  width: 25px;
+  height: 25px;
+  }
+.menu-trigger span {
+  height: 5px;
+  }
+.menu-trigger span:nth-of-type(2) {
+  top: 10px;
+  }
+}
 /* ハンバーガーメニュー基礎ここまで */
 
 /* ハンバーガーメニュー動作 */
@@ -148,6 +163,16 @@ body{
 .menu-trigger.active span:nth-of-type(3) {
   -webkit-transform: translateY(-18px) rotate(45deg);
   transform: translateY(-18px) rotate(45deg);
+}
+@media screen and (max-width:999px){
+  .menu-trigger.active span:nth-of-type(1) {
+  -webkit-transform: translateY(10px) rotate(-45deg);
+  transform: translateY(10px) rotate(-45deg);
+  }
+.menu-trigger.active span:nth-of-type(3) {
+  -webkit-transform: translateY(-10px) rotate(45deg);
+  transform: translateY(-10px) rotate(45deg);
+  }
 }
 /* ハンバーガーメニュー動作ここまで */
 /* ヘッダーここまで */
@@ -210,7 +235,7 @@ footer .copy{
 /* index.html */
 .slider h1{
   text-align: center;
-  font-size: 75px;
+  font-size: 70px;
   text-decoration: underline;
   line-height: 2em;
   color: rgb(0,52,165);
@@ -220,7 +245,7 @@ footer .copy{
 }
 .slider img{
   text-align: center;
-  margin: 0 auto;
+  margin: 0 25vw;
   width: 50vw;
 }
 .slider p{
@@ -237,13 +262,13 @@ footer .copy{
   display: block;
   background-color: rgba(0,0,0,0.2);
 }
-@media screen and (max-width:1499px) {
+@media screen and (max-width:999px) {
   .slider h1{
     font-size:30px;
   }
   .slider img{
     text-align: center;
-    margin: 0 auto;
+    margin: 0 10vw;
     width: 80vw;
   }
   .slider p{
@@ -252,7 +277,7 @@ footer .copy{
   }
 }
 .concept-bar{
-  width: 100%:auto;
+  width: 100%;
   height: 200px;
   background-color: rgb(0,52,165);
 }
@@ -279,6 +304,16 @@ footer .copy{
   height: 50%;
 }
 @media screen and (max-width:999px) {
+  .concept-bar{
+  height: 120px;
+  }
+  .concept-bar h2{
+    font-size: 35px;
+    line-height: 120px;
+  }
+  .concept p{
+    font-size: 18px;
+  }
   .concept .photo{
     flex-wrap: wrap;
   }
