--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-@charset "utf-8";
 /* 全体 */
 body{
   position: relative;
@@ -27,7 +26,7 @@ body{
   z-index: 9999;
   width: 75vw;
 }
-@media screen and (min-width:1500px) {
+@media (min-width:1500px) {
   .start img{
     width:75vh;
   }
@@ -36,11 +35,17 @@ body{
   position: fixed;
   left: 50%;
   top: 50%;
-  transform: translate(-50%,-50%);
+  transform: translate(0,-50%);
   display: none;
   z-index: 9999;
-  font-size: 10vw;
+  font-size: 15vw;
   color: rgb(0,52,165);
+}
+@media (max-width:1499px) {
+  .start p:last-child{
+    left: 5vw;
+    font-size: 10vw;
+  }
 }
 /* 読み込み後のロゴフェードここまで */
 
@@ -57,16 +62,20 @@ body{
   height: 200px;
   margin: 25px auto;
 }
-@media(max-width:999px){
+@media (max-width:1499px) {
+  .logo{
+    height: 120px;
+  }
   .logo img{
-    heught: 80px;
+    margin: 10px;
+    height: 100px;
   }
 }
 /* 開閉式リスト */
 #nav{
   display: none;
   margin: 0 auto;
-  width: 50%;
+  width: 80%;
   z-index: 100;
   position: fixed;
   right: 0;
@@ -82,14 +91,14 @@ body{
 #nav li{
   padding: 15px;
   border-bottom: 1px solid #fff;
-  font-size: 10px;
+  font-size: 8vw;
 }
-@media screen and (min-width:1000px) {
+@media (min-width:1000px) {
   #nav{
-    width: 30%;
+    width: 25%;
   }
   #nav li{
-    font-size: 30px;
+    font-size: 6vh;
   }
 }
 #nav a{
@@ -112,6 +121,11 @@ body{
   cursor: pointer;
   box-shadow: #999 0 0 5px 5px;
 }
+@media (max-width:1499px) {
+  #btn{
+    padding: 10px;
+  }
+}
 .menu-trigger,
 .menu-trigger span {
   display: inline-block;
@@ -120,14 +134,14 @@ body{
 }
 .menu-trigger {
   position: relative;
-  width: 45px;
-  height: 45px;
+  width: 5vw;
+  height: 5vw;
 }
 .menu-trigger span {
   position: absolute;
   left: 0;
   width: 100%;
-  height: 9px;
+  height: 1vw;
   background-color: rgb(0,52,165);
   border-radius: 35%;
 }
@@ -135,48 +149,45 @@ body{
   top: 0;
 }
 .menu-trigger span:nth-of-type(2) {
-  top: 18px;
+  top: 2vw;
 }
 .menu-trigger span:nth-of-type(3) {
   bottom: 0;
 }
-@media screen and (max-width:999px){
-  #btn{
-  padding: 10px;
+@media (min-width:1500px) {
+  .menu-trigger{
+    width: 5vh;
+    height: 5vh;
   }
-.menu-trigger {
-  width: 25px;
-  height: 25px;
+  .menu-trigger span{
+    height: 1vh;
   }
-.menu-trigger span {
-  height: 5px;
-  }
-.menu-trigger span:nth-of-type(2) {
-  top: 10px;
+  .menu-trigger span:nth-of-type(2) {
+    top: 2vh;
   }
 }
 /* ハンバーガーメニュー基礎ここまで */
 
 /* ハンバーガーメニュー動作 */
 .menu-trigger.active span:nth-of-type(1) {
-  -webkit-transform: translateY(18px) rotate(-45deg);
-  transform: translateY(18px) rotate(-45deg);
+  -webkit-transform: translateY(2vw) rotate(-45deg);
+  transform: translateY(2vw) rotate(-45deg);
 }
 .menu-trigger.active span:nth-of-type(2) {
   opacity: 0;
 }
 .menu-trigger.active span:nth-of-type(3) {
-  -webkit-transform: translateY(-18px) rotate(45deg);
-  transform: translateY(-18px) rotate(45deg);
+  -webkit-transform: translateY(-2vw) rotate(45deg);
+  transform: translateY(-2vw) rotate(45deg);
 }
-@media screen and (max-width:999px){
+@media (min-width:1500px){
   .menu-trigger.active span:nth-of-type(1) {
-  -webkit-transform: translateY(10px) rotate(-45deg);
-  transform: translateY(10px) rotate(-45deg);
+    -webkit-transform: translateY(2vh) rotate(-45deg);
+    transform: translateY(2vh) rotate(-45deg);
   }
-.menu-trigger.active span:nth-of-type(3) {
-  -webkit-transform: translateY(-10px) rotate(45deg);
-  transform: translateY(-10px) rotate(45deg);
+  .menu-trigger.active span:nth-of-type(3) {
+    -webkit-transform: translateY(-2vh) rotate(45deg);
+    transform: translateY(-2vh) rotate(45deg);
   }
 }
 /* ハンバーガーメニュー動作ここまで */
@@ -235,22 +246,55 @@ footer span{
 footer .copy{
   font-size: 30px;
 }
+@media (max-width:1499px) {
+  footer{
+    height: 120px;
+  }
+  footer .title{
+    font-size: 25px;
+    margin: auto 10px;
+  }
+  footer li{
+    font-size: 10px;
+    line-height: 1.2em;
+  }
+  footer .right{
+    font-size: 5px;
+    line-height: 2em;
+    margin: 70px 10px ;
+  }
+  footer i{
+    font-size: 15px;
+  }
+  footer span{
+    font-size: 8px;
+  }
+  footer .copy{
+    font-size: 10px;
+  }
+
+}
 /* フッターここまで */
 
 /* index.html */
 .slider h1{
   text-align: center;
-  font-size: 70px;
+  font-size: 75px;
   text-decoration: underline;
   line-height: 2em;
   color: rgb(0,52,165);
+}
+@media (max-width:1499px) {
+  .slider h1{
+    font-size: 30px;
+  }
 }
 .bxslider{
   position: relative;
 }
 .slider img{
   text-align: center;
-  margin: 0 25vw;
+  margin: 0 auto;
   width: 50vw;
 }
 .slider p{
@@ -267,19 +311,16 @@ footer .copy{
   display: block;
   background-color: rgba(0,0,0,0.2);
 }
-@media screen and (max-width:999px) {
-  .slider h1{
-    font-size:30px;
-  }
+@media (max-width:1499px) {
   .slider img{
-    text-align: center;
-    padding: 0;
-    margin: 0 10vw;
+    margin-left: 0;
     width: 80vw;
   }
   .slider p{
+    padding: 0.8em;
+    font-size: 20px;
     width: 80vw;
-    right: 10vw;
+    right: 20vw;
   }
 }
 .concept-bar{
@@ -298,6 +339,18 @@ footer .copy{
   color: rgb(0,52,165);
   text-align: center;
 }
+@media (max-width:1499px) {
+  .concept-bar{
+    height: 120px;
+  }
+  .concept-bar h2{
+    font-size: 30px;
+    line-height: 120px;
+  }
+  .concept p{
+    font-size: 15px;
+  }
+}
 .concept .photo{
   display: flex;
 }
@@ -309,17 +362,7 @@ footer .copy{
   width: 50%;
   height: 50%;
 }
-@media screen and (max-width:999px) {
-  .concept-bar{
-  height: 120px;
-  }
-  .concept-bar h2{
-    font-size: 35px;
-    line-height: 120px;
-  }
-  .concept p{
-    font-size: 18px;
-  }
+@media (max-width:999px) {
   .concept .photo{
     flex-wrap: wrap;
   }
@@ -372,11 +415,11 @@ footer .copy{
 .bottle-menu li,.shot-menu li,
 .champagne-menu li{
   display: flex;
+  flex-wrap: wrap;
 }
 .bottle-menu p,.shot-menu p,
 .champagne-menu p{
   flex: 1;
-  flex-wrap: wrap;
 }
 .plus{
   font-size: 50px;
@@ -414,45 +457,64 @@ footer .copy{
   font-size: 30px;
   padding-left: 20px;
 }
-@media screen and (max-width:899px) {
+@media (max-width:1499px) {
+  .menu-bar{
+    height: 120px;
+  }
+  .menu-bar h2{
+    font-size: 30px;
+    line-height: 120px;
+  }
+  .menu h3{
+    font-size: 20px;
+  }
   .price,.bottle-menu,
   .shot-menu,.champagne-menu{
     padding: 0;
+    margin-left: -20px;
     margin: 5px;
-    font-size: 10px;
-    line-height: 30px;
+    font-size: 8px;
+    line-height: 20px;
+  }
+  .bottle-menu li,.shot-menu li,
+  .champagne-menu li{
+    margin-left: -30px;
   }
   .price p:not(.text){
-    font-size: 35px;
+    font-size: 15px;
     display: inline-block;
-    border-bottom: 3px solid red;
+    border-bottom: 1.5px solid red;
   }
   .shot .price h4,.shot .price p{
-    margin: 80px 0;
+    margin: 60px 0;
   }
   .champagne .price h4,.champagne .price p{
-    margin: 120px 0;
+    margin: 70px 0;
   }
   .text{
-    font-size: 20px;
+    font-size: 10px;
   }
   .set .bottle-menu{
     padding-top: 30px;
   }
   .set .plus{
-    line-height: 180px;
+    line-height: 120px;
   }
   .shot .plus{
-    line-height: 400px;
+    line-height: 200px;
   }
   .champagne .plus{
-    line-height: 550px;
+    line-height: 300px;
   }
   .champagne .price h4{
     padding-top: 0;
   }
   .price h4{
-    font-size: 25px;
+    font-size: 20px;
+  }
+  .coment p{
+    font-size: 15px;
+    padding-left: 10px;
   }
 }
 /* menu.htmlここまで */
@@ -495,18 +557,38 @@ footer .copy{
   border: 2px solid rgb(0,52,165);
   flex: 1;
 }
-@media screen and (max-width:1499px) {
+@media(max-width:1499px)and (min-width:700px) {
   .calendar table{
-    width: 700px;
+    width: 660px;
     margin: 20px auto;
     font-size: 15px;
   }
+  .calendar-bar{
+    height: 120px;
+  }
+  .calendar-bar h2{
+    font-size: 30px;
+    line-height: 120px;
+  }
+  .calendar h3{
+    font-size: 20px;
+  }
 }
-@media screen and (max-width:699px) {
+@media (max-width:699px) {
   .calendar table{
-    width: 500px;
+    width: 300px;
     margin: 20px auto;
     font-size: 8px;
+  }
+  .calendar-bar{
+    height: 120px;
+  }
+  .calendar-bar h2{
+    font-size: 30px;
+    line-height: 120px;
+  }
+  .calendar h3{
+    font-size: 20px;
   }
 }
 /* calendar.htmlここまで */
@@ -543,14 +625,24 @@ footer .copy{
 .access iframe{
   width: 950px;
 }
-@media screen and (max-width:999px) {
-  .access table{
-    width: 500px;
-    margin: 20px auto;
+@media(max-width:1499px){
+  .access-bar{
+    height: 120px;
+  }
+  .access-bar h2{
+    font-size: 30px;
+    line-height: 120px;
+  }
+  .access h3{
     font-size: 20px;
   }
+  .access table{
+    width: 300px;
+    margin: 20px auto;
+    font-size: 15px;
+  }
   .access iframe{
-    width: 450px;
+    width: 280px;
   }
 }
 /* access.htmlここまで */
@@ -570,9 +662,19 @@ footer .copy{
 .sns .contents{
   margin: 20px 30%;
 }
-@media screen and (max-width:999px) {
+@media(max-width:1499px){
+  .sns-bar{
+    height: 120px;
+  }
+  .sns-bar h2{
+    font-size: 30px;
+    line-height: 120px;
+  }
+  .sns h3{
+    font-size: 20px;
+  }
   .sns .contents{
-    margin: 15px 10%;
+    margin: 20px 5%;
   }
 }
 /* sns.htmlここまで */
